@@ -10,7 +10,8 @@ Smoothers to Draw Lines on Scatterplots
 
 \description{
 These smoothers are used to draw nonparametric-regression lines on scatterplots produced by
-the \code{\link{scatterplot}} and \code{\link{scatterplotMatrix}} functions. The functions aren't meant to
+the \code{\link{scatterplot}}, \code{\link{scatterplotMatrix}} and other \code{car} functions. 
+The functions aren't meant to
 be called directly by the user, although the user can supply options via the \code{smoother.args} argument,
 the contents of which vary by the smoother (see \emph{Details} below). The \code{gamLine} smoother uses the
 \code{\link[mgcv]{gam}} function in the \pkg{mgcv} package, the \code{loessLine} smoother uses the
@@ -19,11 +20,11 @@ the contents of which vary by the smoother (see \emph{Details} below). The \code
 }
 
 \usage{
-gamLine(x, y, col, log.x, log.y, by.groups, smoother.args)
+gamLine(x, y, col, log.x, log.y, spread=FALSE, smoother.args)
 
-loessLine(x, y, col, log.x, log.y, by.groups, smoother.args)
+loessLine(x, y, col, log.x, log.y, spread=FALSE, smoother.args)
 
-quantregLine(x, y, col, log.x, log.y, by.groups, smoother.args)
+quantregLine(x, y, col, log.x, log.y, spread=FALSE, smoother.args)
 }
 
 \arguments{
@@ -32,19 +33,82 @@ quantregLine(x, y, col, log.x, log.y, by.groups, smoother.args)
   \item{col}{line color.}
   \item{log.x}{\code{TRUE} if the $x$-axis is logged.}
   \item{log.y}{\code{TRUE} if the $y$-axis is logged.}
-  \item{by.groups}{\code{TRUE} if plotting is by groups.}
+  \item{spread}{the default is to plot only an estimated mean or median.  If this
+  argument is TRUE, then a measure of spread is also plotted.}
   \item{smoother.args}{additional options accapted by the smoother, in the form of a list of
-    named values (see \emph{Detaisl} below).}
+    named values (see \emph{Details} below).}
 }
 
 \details{
-    *** details to come ***
-    }
+The function \code{loessLine} is a reimplementation of the \code{loess} smoother
+that has been used in \code{car} prior to September 2012.  The only enhancement is the ability to
+set more arguments through the \code{smoother.args} argument.
+
+The function \code{gamLine} is new and more general than the \code{loess} fitting
+because it allows fitting a generalized additive model using splines.  You can specify a error
+distribution and link function.  
+
+The function \code{quantregLine} fits an additive model using splines with estimation
+based on L1 regression and quantile regression if you ask for the spread.  It is
+likely to be more robust than the other smoothers.
+
+The argument \code{smoother.args} is a list of named elements used to pass 
+additional arguments to the smoother.
+
+For \code{loessLine} the default value is
+\code{smoother.args=list(lty=1, lwd=2, lty.spread=2, lwd.spread=1, span=0.5,
+loess.threshold=5)}.  The arguments \code{lty} and \code{lwd} are the type and width 
+respectively of the mean or median smooth, \code{smooth.lty}
+and \code{smooth.lwd} are the type and color of the spread smooths if requested.
+The \code{span} is
+passed to the \code{\link{loess}} function, and \code{loess.threshold} is the minimum
+number of support points needed to compute the smooth.
+
+For \code{gamLine} the default is
+\code{smoother.args=list(lty=1, lwd=2, lty.spread=2, lwd.spread=1,
+lambda=IQR(x)}.  The first four
+arguments are as for \code{loessLine}.  The last argument is passed to the
+\code{\link[quantreg]{qss}} function in \code{quantreg}.  It is a smoothing
+parameter, here a robust estimate of the scale of the horizontal axis variable.
+This is an arbitrary choice, and may not work well in all circumstances.
+}
     
-\author{John Fox \email{jfox@mcmaster.ca} and Sanford Weisberg.}
+\author{John Fox \email{jfox@mcmaster.ca} and Sanford Weisberg\email{sandy@umn.edu}.}
 
 \seealso{\code{\link{scatterplot}}, \code{\link{scatterplotMatrix}}, \code{\link[mgcv]{gam}},
     \code{\link[stats]{loess}}, and \code{\link[quantreg]{rqss}}.}
     
+\examples{
+scatterplot(prestige ~ income, data=Prestige)
+scatterplot(prestige ~ income, data=Prestige, smoother=gamLine)
+scatterplot(prestige ~ income, data=Prestige, smoother=quantregLine)
 
+scatterplot(prestige ~ income | type, data=Prestige)
+scatterplot(prestige ~ income | type, data=Prestige, smoother=gamLine)
+scatterplot(prestige ~ income | type, data=Prestige, smoother=quantregLine)
+scatterplot(prestige ~ income | type, data=Prestige, smoother=NULL)
+
+scatterplot(prestige ~ income | type, data=Prestige, spread=TRUE)
+scatterplot(prestige ~ income | type, data=Prestige, smoother=gamLine, spread=TRUE)
+scatterplot(prestige ~ income | type, data=Prestige, smoother=quantregLine, spread=TRUE)
+
+scatterplot(weight ~ repwt | sex, spread=TRUE, data=Davis, smoother=loessLine)
+scatterplot(weight ~ repwt | sex, spread=TRUE, data=Davis, smoother=gamLine) # messes up
+scatterplot(weight ~ repwt | sex, spread=TRUE, data=Davis, smoother=quantregLine) #  robust
+set.seed(12345)
+w <- 1 + rpois(100, 5)
+x <- rnorm(100)
+p <- 1/(1 + exp(-(x + 0.5*x^2)))
+s <- rbinom(100, w, p)
+scatterplot(s/w ~ x, smoother=gamLine, 
+       smoother.args=list(family="binomial", weights=w))
+scatterplot(s/w ~ x, smoother=gamLine, 
+       smoother.args=list(family=binomial, link="probit", weights=w))
+scatterplot(s/w ~ x, smoother=gamLine, 
+       smoother.args=list(family=binomial, link="probit", weights=w)) 
+scatterplot(s/w ~ x, smoother=loessLine, reg=FALSE) 
+
+y <- rbinom(100, 1, p)
+scatterplot(y ~ x, smoother=gamLine, smoother.args=list(family=binomial)) 
+}
 \keyword{hplot}
